@@ -27,20 +27,22 @@ import static org.openmetadata.service.Entity.TEAM;
 import static org.openmetadata.service.Entity.USER;
 import static org.openmetadata.service.util.EntityUtil.objectMatch;
 
+import jakarta.json.JsonPatch;
+import jakarta.ws.rs.core.SecurityContext;
+import jakarta.ws.rs.core.UriInfo;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.TreeSet;
 import java.util.UUID;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-import javax.json.JsonPatch;
-import javax.ws.rs.core.SecurityContext;
-import javax.ws.rs.core.UriInfo;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.csv.CSVPrinter;
 import org.apache.commons.csv.CSVRecord;
@@ -50,6 +52,7 @@ import org.openmetadata.schema.EntityInterface;
 import org.openmetadata.schema.api.teams.CreateTeam.TeamType;
 import org.openmetadata.schema.api.teams.CreateUser;
 import org.openmetadata.schema.entity.teams.AuthenticationMechanism;
+import org.openmetadata.schema.entity.teams.Persona;
 import org.openmetadata.schema.entity.teams.Team;
 import org.openmetadata.schema.entity.teams.User;
 import org.openmetadata.schema.services.connections.metadata.AuthProvider;
@@ -63,12 +66,15 @@ import org.openmetadata.schema.type.csv.CsvFile;
 import org.openmetadata.schema.type.csv.CsvHeader;
 import org.openmetadata.schema.type.csv.CsvImportResult;
 import org.openmetadata.schema.utils.EntityInterfaceUtil;
+import org.openmetadata.schema.utils.JsonUtils;
 import org.openmetadata.service.Entity;
 import org.openmetadata.service.OpenMetadataApplicationConfig;
 import org.openmetadata.service.exception.BadRequestException;
 import org.openmetadata.service.exception.CatalogExceptionMessage;
 import org.openmetadata.service.exception.EntityNotFoundException;
 import org.openmetadata.service.jdbi3.CollectionDAO.EntityRelationshipRecord;
+import org.openmetadata.service.jdbi3.CollectionDAO.UserDAO;
+import org.openmetadata.service.resources.feeds.FeedUtil;
 import org.openmetadata.service.resources.teams.UserResource;
 import org.openmetadata.service.secrets.SecretsManager;
 import org.openmetadata.service.secrets.SecretsManagerFactory;
@@ -77,7 +83,7 @@ import org.openmetadata.service.security.auth.BotTokenCache;
 import org.openmetadata.service.security.policyevaluator.SubjectContext;
 import org.openmetadata.service.util.EntityUtil;
 import org.openmetadata.service.util.EntityUtil.Fields;
-import org.openmetadata.service.util.JsonUtils;
+import org.openmetadata.service.util.FullyQualifiedName;
 import org.openmetadata.service.util.UserUtil;
 
 @Slf4j
@@ -86,9 +92,9 @@ public class UserRepository extends EntityRepository<User> {
   static final String TEAMS_FIELD = "teams";
   public static final String AUTH_MECHANISM_FIELD = "authenticationMechanism";
   static final String USER_PATCH_FIELDS =
-      "profile,roles,teams,authenticationMechanism,isEmailVerified,personas,defaultPersona,domains";
+      "profile,roles,teams,authenticationMechanism,isEmailVerified,personas,defaultPersona,domains,personaPreferences";
   static final String USER_UPDATE_FIELDS =
-      "profile,roles,teams,authenticationMechanism,isEmailVerified,personas,defaultPersona,domains";
+      "profile,roles,teams,authenticationMechanism,isEmailVerified,personas,defaultPersona,domains,personaPreferences";
   private volatile EntityReference organization;
 
   public UserRepository() {
@@ -101,6 +107,15 @@ public class UserRepository extends EntityRepository<User> {
         USER_UPDATE_FIELDS);
     this.quoteFqn = true;
     supportsSearch = true;
+
+    // Register bulk field fetchers for User-specific fields
+    this.fieldFetchers.put("teams", this::fetchAndSetTeams);
+    this.fieldFetchers.put("roles", this::fetchAndSetRoles);
+    this.fieldFetchers.put("owns", this::fetchAndSetOwns);
+    this.fieldFetchers.put("follows", this::fetchAndSetFollows);
+    this.fieldFetchers.put("personas", this::fetchAndSetPersonas);
+    this.fieldFetchers.put("defaultPersona", this::fetchAndSetDefaultPersona);
+    this.fieldFetchers.put("domains", this::fetchAndSetDomains);
   }
 
   private EntityReference getOrganization() {
@@ -207,9 +222,11 @@ public class UserRepository extends EntityRepository<User> {
     // Relationships and fields such as href are derived and not stored as part of json
     List<EntityReference> roles = user.getRoles();
     List<EntityReference> teams = user.getTeams();
+    EntityReference defaultPersona = user.getDefaultPersona();
 
-    // Don't store roles, teams and href as JSON. Build it on the fly based on relationships
-    user.withRoles(null).withTeams(null).withInheritedRoles(null);
+    // Don't store roles, teams, defaultPersona and href as JSON. Build it on the fly based on
+    // relationships
+    user.withRoles(null).withTeams(null).withInheritedRoles(null).withDefaultPersona(null);
 
     SecretsManager secretsManager = SecretsManagerFactory.getSecretsManager();
     if (secretsManager != null && Boolean.TRUE.equals(user.getIsBot())) {
@@ -220,7 +237,7 @@ public class UserRepository extends EntityRepository<User> {
     store(user, update);
 
     // Restore the relationships
-    user.withRoles(roles).withTeams(teams);
+    user.withRoles(roles).withTeams(teams).withDefaultPersona(defaultPersona);
   }
 
   public void updateUserLastLoginTime(User orginalUser, long lastLoginTime) {
@@ -229,6 +246,55 @@ public class UserRepository extends EntityRepository<User> {
         JsonUtils.getJsonPatch(orginalUser, updatedUser.withLastLoginTime(lastLoginTime));
     UserRepository userRepository = (UserRepository) Entity.getEntityRepository(Entity.USER);
     userRepository.patch(null, orginalUser.getId(), orginalUser.getUpdatedBy(), patch);
+  }
+
+  @Transaction
+  public void updateUserLastActivityTime(String userName, long lastActivityTime) {
+    // Direct SQL update to minimize DB load - single query
+    // Updates only the lastActivityTime field in the JSON using JSON_SET
+    // This method is used for immediate updates (e.g., in tests)
+    // For production use, UserActivityTracker should be used for batch updates
+    String fqn = quoteName(userName.toLowerCase());
+
+    LOG.debug(
+        "Updating lastActivityTime for user: {} (fqn: {}) to: {}", userName, fqn, lastActivityTime);
+
+    // Use the custom DAO method for optimized update
+    // Note: @BindFQN will automatically hash the fqn, so we don't pre-hash it
+    ((UserDAO) daoCollection.userDAO()).updateLastActivityTime(fqn, lastActivityTime);
+  }
+
+  @Transaction
+  public void updateUsersLastActivityTimeBatch(Map<String, Long> userActivityMap) {
+    if (userActivityMap.isEmpty()) {
+      return;
+    }
+
+    // Bulk update all users' activity times in a single query
+    // This is much more efficient than individual updates
+    UserDAO userDAO = (UserDAO) daoCollection.userDAO();
+
+    // Build the CASE statement and collect nameHashes
+    StringBuilder caseBuilder = new StringBuilder();
+    List<String> nameHashes = new ArrayList<>();
+
+    for (Map.Entry<String, Long> entry : userActivityMap.entrySet()) {
+      String fqn = quoteName(entry.getKey().toLowerCase());
+      String fqnHash = FullyQualifiedName.buildHash(fqn);
+
+      nameHashes.add(fqnHash);
+      caseBuilder
+          .append("WHEN '")
+          .append(fqnHash)
+          .append("' THEN ")
+          .append(entry.getValue())
+          .append(" ");
+    }
+
+    if (!nameHashes.isEmpty()) {
+      String caseStatements = caseBuilder.toString();
+      userDAO.updateLastActivityTimeBulk(caseStatements, nameHashes);
+    }
   }
 
   @Override
@@ -274,7 +340,7 @@ public class UserRepository extends EntityRepository<User> {
     user.setRoles(fields.contains(ROLES_FIELD) ? getRoles(user) : user.getRoles());
     user.setPersonas(fields.contains("personas") ? getPersonas(user) : user.getPersonas());
     user.setDefaultPersona(
-        fields.contains("defaultPersonas") ? getDefaultPersona(user) : user.getDefaultPersona());
+        fields.contains("defaultPersona") ? getDefaultPersona(user) : user.getDefaultPersona());
     user.withInheritedRoles(
         fields.contains(ROLES_FIELD) ? getInheritedRoles(user) : user.getInheritedRoles());
     user.setDomains(fields.contains("domains") ? getDomains(user.getId()) : user.getDomains());
@@ -290,6 +356,12 @@ public class UserRepository extends EntityRepository<User> {
     user.setAuthenticationMechanism(
         fields.contains(AUTH_MECHANISM_FIELD) ? user.getAuthenticationMechanism() : null);
     user.withInheritedRoles(fields.contains(ROLES_FIELD) ? user.getInheritedRoles() : null);
+    user.setLastActivityTime(
+        fields.contains("lastActivityTime") ? user.getLastActivityTime() : null);
+    user.setLastLoginTime(fields.contains("lastLoginTime") ? user.getLastLoginTime() : null);
+    user.setPersonas(fields.contains("personas") ? user.getPersonas() : null);
+    user.setDefaultPersona(fields.contains("defaultPersona") ? user.getDefaultPersona() : null);
+    user.setDomains(fields.contains("domains") ? user.getDomains() : null);
   }
 
   @Override
@@ -326,6 +398,10 @@ public class UserRepository extends EntityRepository<User> {
     } else {
       user.setTeams(new ArrayList<>(List.of(getOrganization()))); // Organization is a default team
     }
+  }
+
+  protected void entitySpecificCleanup(User entityInterface) {
+    FeedUtil.cleanUpTaskForAssignees(entityInterface.getId(), USER);
   }
 
   /* Validate if the user is already part of the given team */
@@ -473,7 +549,15 @@ public class UserRepository extends EntityRepository<User> {
   }
 
   public EntityReference getDefaultPersona(User user) {
-    return getToEntityRef(user.getId(), Relationship.DEFAULTS_TO, Entity.PERSONA, false);
+    EntityReference userDefaultPersona =
+        getFromEntityRef(user.getId(), USER, Relationship.DEFAULTS_TO, Entity.PERSONA, false);
+    if (userDefaultPersona != null) {
+      return userDefaultPersona;
+    }
+    PersonaRepository personaRepository =
+        (PersonaRepository) Entity.getEntityRepository(Entity.PERSONA);
+    Persona systemDefault = personaRepository.getSystemDefaultPersona();
+    return systemDefault != null ? systemDefault.getEntityReference() : null;
   }
 
   private void assignRoles(User user, List<EntityReference> roles) {
@@ -511,6 +595,292 @@ public class UserRepository extends EntityRepository<User> {
     if (persona != null) {
       addRelationship(
           persona.getId(), user.getId(), Entity.PERSONA, USER, Relationship.DEFAULTS_TO);
+    }
+  }
+
+  // Bulk fetch methods for User-specific fields
+  private void fetchAndSetTeams(List<User> users, Fields fields) {
+    if (!fields.contains(TEAMS_FIELD) || users == null || users.isEmpty()) {
+      return;
+    }
+
+    List<String> userIds = users.stream().map(User::getId).map(UUID::toString).distinct().toList();
+
+    List<CollectionDAO.EntityRelationshipObject> teamRecords =
+        daoCollection
+            .relationshipDAO()
+            .findFromBatch(userIds, Relationship.HAS.ordinal(), Entity.TEAM, USER);
+
+    Map<UUID, List<EntityReference>> userToTeams = new HashMap<>();
+    for (CollectionDAO.EntityRelationshipObject record : teamRecords) {
+      UUID userId = UUID.fromString(record.getToId());
+      EntityReference teamRef =
+          Entity.getEntityReferenceById(
+              Entity.TEAM, UUID.fromString(record.getFromId()), Include.ALL);
+      userToTeams.computeIfAbsent(userId, k -> new ArrayList<>()).add(teamRef);
+    }
+
+    for (User user : users) {
+      List<EntityReference> teamRefs = userToTeams.get(user.getId());
+      if (teamRefs != null && !teamRefs.isEmpty()) {
+        // Filter out deleted teams
+        teamRefs =
+            teamRefs.stream().filter(team -> !team.getDeleted()).collect(Collectors.toList());
+        // If there are teams and more than 1, filter out organization
+        if (teamRefs.size() > 1) {
+          teamRefs =
+              teamRefs.stream()
+                  .filter(t -> !t.getId().equals(getOrganization().getId()))
+                  .collect(Collectors.toList());
+        }
+        user.setTeams(teamRefs);
+      } else {
+        // If no teams, set organization as default
+        user.setTeams(new ArrayList<>(List.of(getOrganization())));
+      }
+    }
+  }
+
+  private void fetchAndSetRoles(List<User> users, Fields fields) {
+    if (!fields.contains(ROLES_FIELD) || users == null || users.isEmpty()) {
+      return;
+    }
+
+    List<String> userIds = users.stream().map(User::getId).map(UUID::toString).distinct().toList();
+
+    List<CollectionDAO.EntityRelationshipObject> roleRecords =
+        daoCollection
+            .relationshipDAO()
+            .findToBatch(userIds, Relationship.HAS.ordinal(), USER, Entity.ROLE);
+
+    Map<UUID, List<EntityReference>> userToRoles = new HashMap<>();
+    for (CollectionDAO.EntityRelationshipObject record : roleRecords) {
+      UUID userId = UUID.fromString(record.getFromId());
+      EntityReference roleRef =
+          Entity.getEntityReferenceById(
+              Entity.ROLE, UUID.fromString(record.getToId()), Include.ALL);
+      userToRoles.computeIfAbsent(userId, k -> new ArrayList<>()).add(roleRef);
+    }
+
+    for (User user : users) {
+      List<EntityReference> roleRefs = userToRoles.get(user.getId());
+      user.setRoles(roleRefs != null ? roleRefs : new ArrayList<>());
+      // Also set inherited roles
+      user.withInheritedRoles(getInheritedRoles(user));
+    }
+  }
+
+  private void fetchAndSetOwns(List<User> users, Fields fields) {
+    if (!fields.contains("owns") || users == null || users.isEmpty()) {
+      return;
+    }
+
+    List<String> userIds = users.stream().map(User::getId).map(UUID::toString).distinct().toList();
+
+    // Get entities owned by users
+    List<CollectionDAO.EntityRelationshipObject> ownsRecords =
+        daoCollection
+            .relationshipDAO()
+            .findToBatchAllTypes(userIds, Relationship.OWNS.ordinal(), Include.ALL);
+
+    // Also get entities owned by teams that users belong to
+    // First get all teams for all users
+    Map<UUID, List<EntityReference>> userTeams = new HashMap<>();
+    if (!fields.contains(TEAMS_FIELD)) {
+      // If teams weren't already fetched, we need to get them
+      List<CollectionDAO.EntityRelationshipObject> teamRecords =
+          daoCollection
+              .relationshipDAO()
+              .findFromBatch(userIds, Relationship.HAS.ordinal(), Entity.TEAM, USER);
+      for (CollectionDAO.EntityRelationshipObject record : teamRecords) {
+        UUID userId = UUID.fromString(record.getToId());
+        EntityReference teamRef =
+            Entity.getEntityReferenceById(
+                Entity.TEAM, UUID.fromString(record.getFromId()), Include.ALL);
+        userTeams.computeIfAbsent(userId, k -> new ArrayList<>()).add(teamRef);
+      }
+    } else {
+      // Use already fetched teams
+      for (User user : users) {
+        if (user.getTeams() != null) {
+          userTeams.put(user.getId(), user.getTeams());
+        }
+      }
+    }
+
+    // Get entities owned by teams
+    Set<String> allTeamIds =
+        userTeams.values().stream()
+            .flatMap(List::stream)
+            .map(EntityReference::getId)
+            .map(UUID::toString)
+            .collect(Collectors.toSet());
+
+    List<CollectionDAO.EntityRelationshipObject> teamOwnsRecords = new ArrayList<>();
+    if (!allTeamIds.isEmpty()) {
+      teamOwnsRecords =
+          daoCollection
+              .relationshipDAO()
+              .findToBatchAllTypes(
+                  new ArrayList<>(allTeamIds), Relationship.OWNS.ordinal(), Include.ALL);
+    }
+
+    // Map user to owned entities
+    Map<UUID, List<EntityReference>> userToOwns = new HashMap<>();
+
+    // Add directly owned entities
+    for (CollectionDAO.EntityRelationshipObject record : ownsRecords) {
+      UUID userId = UUID.fromString(record.getFromId());
+      try {
+        EntityReference ownedRef =
+            Entity.getEntityReferenceById(
+                record.getToEntity(), UUID.fromString(record.getToId()), Include.ALL);
+        userToOwns.computeIfAbsent(userId, k -> new ArrayList<>()).add(ownedRef);
+      } catch (Exception e) {
+        LOG.warn("Failed to get entity reference for owned entity: {}", record.getToId(), e);
+      }
+    }
+
+    // Add team-owned entities
+    Map<UUID, List<EntityReference>> teamToOwns = new HashMap<>();
+    for (CollectionDAO.EntityRelationshipObject record : teamOwnsRecords) {
+      UUID teamId = UUID.fromString(record.getFromId());
+      try {
+        EntityReference ownedRef =
+            Entity.getEntityReferenceById(
+                record.getToEntity(), UUID.fromString(record.getToId()), Include.ALL);
+        teamToOwns.computeIfAbsent(teamId, k -> new ArrayList<>()).add(ownedRef);
+      } catch (Exception e) {
+        LOG.warn("Failed to get entity reference for team-owned entity: {}", record.getToId(), e);
+      }
+    }
+
+    // Combine user and team owned entities
+    for (User user : users) {
+      List<EntityReference> ownedEntities =
+          userToOwns.getOrDefault(user.getId(), new ArrayList<>());
+      List<EntityReference> teams = userTeams.get(user.getId());
+      if (teams != null) {
+        for (EntityReference team : teams) {
+          List<EntityReference> teamOwned = teamToOwns.get(team.getId());
+          if (teamOwned != null) {
+            ownedEntities.addAll(teamOwned);
+          }
+        }
+      }
+      user.setOwns(ownedEntities);
+    }
+  }
+
+  private void fetchAndSetFollows(List<User> users, Fields fields) {
+    if (!fields.contains("follows") || users == null || users.isEmpty()) {
+      return;
+    }
+
+    List<String> userIds = users.stream().map(User::getId).map(UUID::toString).distinct().toList();
+
+    List<CollectionDAO.EntityRelationshipObject> followsRecords =
+        daoCollection
+            .relationshipDAO()
+            .findToBatchAllTypes(userIds, Relationship.FOLLOWS.ordinal(), Include.ALL);
+
+    Map<UUID, List<EntityReference>> userToFollows = new HashMap<>();
+    for (CollectionDAO.EntityRelationshipObject record : followsRecords) {
+      UUID userId = UUID.fromString(record.getFromId());
+      try {
+        EntityReference followedRef =
+            Entity.getEntityReferenceById(
+                record.getToEntity(), UUID.fromString(record.getToId()), Include.ALL);
+        userToFollows.computeIfAbsent(userId, k -> new ArrayList<>()).add(followedRef);
+      } catch (Exception e) {
+        LOG.warn("Failed to get entity reference for followed entity: {}", record.getToId(), e);
+      }
+    }
+
+    for (User user : users) {
+      List<EntityReference> followsRefs = userToFollows.get(user.getId());
+      user.setFollows(followsRefs != null ? followsRefs : new ArrayList<>());
+    }
+  }
+
+  private void fetchAndSetPersonas(List<User> users, Fields fields) {
+    if (!fields.contains("personas") || users == null || users.isEmpty()) {
+      return;
+    }
+
+    List<String> userIds = users.stream().map(User::getId).map(UUID::toString).distinct().toList();
+
+    List<CollectionDAO.EntityRelationshipObject> personaRecords =
+        daoCollection
+            .relationshipDAO()
+            .findFromBatch(userIds, Relationship.APPLIED_TO.ordinal(), Entity.PERSONA, USER);
+
+    Map<UUID, List<EntityReference>> userToPersonas = new HashMap<>();
+    for (CollectionDAO.EntityRelationshipObject record : personaRecords) {
+      UUID userId = UUID.fromString(record.getToId());
+      EntityReference personaRef =
+          Entity.getEntityReferenceById(
+              Entity.PERSONA, UUID.fromString(record.getFromId()), Include.ALL);
+      userToPersonas.computeIfAbsent(userId, k -> new ArrayList<>()).add(personaRef);
+    }
+
+    for (User user : users) {
+      List<EntityReference> personaRefs = userToPersonas.get(user.getId());
+      user.setPersonas(personaRefs != null ? personaRefs : new ArrayList<>());
+    }
+  }
+
+  private void fetchAndSetDefaultPersona(List<User> users, Fields fields) {
+    if (!fields.contains("defaultPersona") || users == null || users.isEmpty()) {
+      return;
+    }
+
+    List<String> userIds = users.stream().map(User::getId).map(UUID::toString).distinct().toList();
+
+    List<CollectionDAO.EntityRelationshipObject> defaultPersonaRecords =
+        daoCollection
+            .relationshipDAO()
+            .findFromBatch(userIds, Relationship.DEFAULTS_TO.ordinal(), Entity.PERSONA, USER);
+
+    Map<UUID, EntityReference> userToDefaultPersona = new HashMap<>();
+    for (CollectionDAO.EntityRelationshipObject record : defaultPersonaRecords) {
+      UUID userId = UUID.fromString(record.getToId());
+      EntityReference personaRef =
+          Entity.getEntityReferenceById(
+              Entity.PERSONA, UUID.fromString(record.getFromId()), Include.ALL);
+      userToDefaultPersona.put(userId, personaRef);
+    }
+
+    for (User user : users) {
+      EntityReference defaultPersonaRef = userToDefaultPersona.get(user.getId());
+      user.setDefaultPersona(defaultPersonaRef);
+    }
+  }
+
+  private void fetchAndSetDomains(List<User> users, Fields fields) {
+    if (!fields.contains("domains") || users == null || users.isEmpty()) {
+      return;
+    }
+
+    List<String> userIds = users.stream().map(User::getId).map(UUID::toString).distinct().toList();
+
+    List<CollectionDAO.EntityRelationshipObject> domainRecords =
+        daoCollection
+            .relationshipDAO()
+            .findFromBatch(userIds, Relationship.HAS.ordinal(), Entity.DOMAIN, USER);
+
+    Map<UUID, List<EntityReference>> userToDomains = new HashMap<>();
+    for (CollectionDAO.EntityRelationshipObject record : domainRecords) {
+      UUID userId = UUID.fromString(record.getToId());
+      EntityReference domainRef =
+          Entity.getEntityReferenceById(
+              Entity.DOMAIN, UUID.fromString(record.getFromId()), Include.ALL);
+      userToDomains.computeIfAbsent(userId, k -> new ArrayList<>()).add(domainRef);
+    }
+
+    for (User user : users) {
+      List<EntityReference> domainRefs = userToDomains.get(user.getId());
+      user.setDomains(domainRefs != null ? domainRefs : new ArrayList<>());
     }
   }
 
@@ -555,7 +925,7 @@ public class UserRepository extends EntityRepository<User> {
       addField(recordList, entity.getEmail());
       addField(recordList, entity.getTimezone());
       addField(recordList, entity.getIsAdmin());
-      addField(recordList, entity.getTeams().get(0).getFullyQualifiedName());
+      addField(recordList, entity.getTeams().getFirst().getFullyQualifiedName());
       addEntityReferences(recordList, entity.getRoles());
       addRecord(csvFile, recordList);
     }
@@ -653,13 +1023,13 @@ public class UserRepository extends EntityRepository<User> {
       updateRoles(original, updated);
       updateTeams(original, updated);
       updatePersonas(original, updated);
-      recordChange(
-          "defaultPersona", original.getDefaultPersona(), updated.getDefaultPersona(), true);
+      updateDefaultPersona(original, updated);
       recordChange("profile", original.getProfile(), updated.getProfile(), true);
       recordChange("timezone", original.getTimezone(), updated.getTimezone());
       recordChange("isBot", original.getIsBot(), updated.getIsBot());
       recordChange("isAdmin", original.getIsAdmin(), updated.getIsAdmin());
       recordChange("isEmailVerified", original.getIsEmailVerified(), updated.getIsEmailVerified());
+      updatePersonaPreferences(original, updated);
       updateAuthenticationMechanism(original, updated);
     }
 
@@ -692,8 +1062,12 @@ public class UserRepository extends EntityRepository<User> {
 
       List<EntityReference> origDomains =
           EntityUtil.populateEntityReferences(listOrEmptyMutable(original.getDomains()));
+      // Skip domains inherited from teams,they are handled in setInheritedFields().
       List<EntityReference> updatedDomains =
-          EntityUtil.populateEntityReferences(listOrEmptyMutable(updated.getDomains()));
+          EntityUtil.populateEntityReferences(listOrEmptyMutable(updated.getDomains())).stream()
+              .filter(domain -> domain.getInherited() == null || !domain.getInherited())
+              .collect(Collectors.toList());
+      updated.setDomains(updatedDomains);
 
       // Remove Domains for the user
       deleteTo(original.getId(), USER, Relationship.HAS, Entity.DOMAIN);
@@ -737,7 +1111,7 @@ public class UserRepository extends EntityRepository<User> {
           .forEach(
               teamRef -> {
                 EntityInterface team = Entity.getEntity(teamRef, "id,userCount", Include.ALL);
-                searchRepository.updateEntity(team);
+                searchRepository.updateEntityIndex(team);
               });
     }
 
@@ -761,6 +1135,48 @@ public class UserRepository extends EntityRepository<User> {
           added,
           deleted,
           EntityUtil.entityReferenceMatch);
+    }
+
+    private void updateDefaultPersona(User original, User updated) {
+      // Get the actual default persona from the database (not the system default)
+      // The relationship is: persona --DEFAULTS_TO--> user, so we need to find FROM user
+      EntityReference originalDefaultPersona =
+          getFromEntityRef(original.getId(), USER, Relationship.DEFAULTS_TO, Entity.PERSONA, false);
+      if (originalDefaultPersona != null) {
+        // Delete the relationship: persona --DEFAULTS_TO--> user
+        deleteTo(original.getId(), USER, Relationship.DEFAULTS_TO, Entity.PERSONA);
+      }
+      assignDefaultPersona(updated, updated.getDefaultPersona());
+      recordChange("defaultPersona", originalDefaultPersona, updated.getDefaultPersona(), true);
+    }
+
+    private void updatePersonaPreferences(User original, User updated) {
+      var updatedPreferences = updated.getPersonaPreferences();
+
+      if (updatedPreferences != null && !updatedPreferences.isEmpty()) {
+        var userPersonas = updated.getPersonas();
+        if (userPersonas == null || userPersonas.isEmpty()) {
+          throw new BadRequestException(
+              "User has no personas assigned. Cannot set persona preferences.");
+        }
+        var assignedPersonaIds =
+            userPersonas.stream().map(EntityReference::getId).collect(Collectors.toSet());
+        for (var pref : updatedPreferences) {
+          if (!assignedPersonaIds.contains(pref.getPersonaId())) {
+            throw new BadRequestException(
+                "Persona with ID %s is not assigned to this user".formatted(pref.getPersonaId()));
+          }
+          if (pref.getLandingPageSettings() != null) {
+            UserUtil.validateUserPersonaPreferencesImage(pref.getLandingPageSettings());
+          }
+        }
+      }
+
+      recordChange(
+          "personaPreferences",
+          original.getPersonaPreferences(),
+          updated.getPersonaPreferences(),
+          true);
     }
 
     private void updateAuthenticationMechanism(User original, User updated) {
